fix: img was too big. feat: black and white qrcode + click on the img to download it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,9 @@
 }
 
 .my-max-widht{
-    max-width: 500px;
+    max-width: 400px;
     margin: 0 auto;
+
 }
 body{
     background-color: hsl(212, 45%, 89%);
